--- a/views/partials/goatInfo.hbs
+++ b/views/partials/goatInfo.hbs
@@ -1,5 +1,10 @@
 <div class="goat-info">
-<h3>Baaaaah! Great Success!</h3>
+<div class="success">
+  <h3>Baaaaah! Great Success!</h3>
+</div>
+<div class="failure">
+  <h3>Naaaaah! Great Failure!</h3>
+</div>
 <ul>
     <li>This goats name is: {{name}}</li>
     <li>It comes from:{{location}}</li>
