--- a/views/partials/guess.hbs
+++ b/views/partials/guess.hbs
@@ -1,11 +1,11 @@
 <div class="guess">
-<form action="/game/{{id}}/edit" method="post">
+<form action="/goat/{{id}}" method="post">
   <label for="goats">Choose a region:</label>
   <select id="goats" name="goats">
     <option value="na">North America</option>
-    <option value="sa">South Africa</option>
+    <option value="sa">Africa</option>
     <option value="eu">Europe</option>
-    <option value="sas">South Asia</option>
+    <option value="sas">Asia</option>
     <option value="oce">Oceania</option>
   </select>
   <input type="submit">
