button on homes links to goat 1

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,13 +1,12 @@
 {{!-- welcome page
       input for username --}}
 
-{{>header}}
-
 <div class="username-input">
   <form>
-    <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username"><br>
-    <input type="submit" value="Submit">
+    <br>
+    <br>
+    <button><a href="/goat/1">Click me to play</a></button>
+    <br><br>
   </form>
 </div>
 
