functionality to render success or fail message based on input

--- a/views/partials/nextGoat.hbs
+++ b/views/partials/nextGoat.hbs
@@ -1,1 +1,1 @@
-<button class="NextButton">NEXT GOAT</button>
+<form><button action="/goat/{{id}}" method="post" class="NextButton" type="submit">NEXT GOAT</button></form>
