--- a/views/partials/nextGoat.hbs
+++ b/views/partials/nextGoat.hbs
@@ -1,1 +1,1 @@
-<form><button action="/goat/{{id}}" method="post" class="NextButton" type="submit">NEXT GOAT</button></form>
+<button><a href="/goat/{{nextID}}">NEXT GOAT</a></button>
