--- a/public/main.css
+++ b/public/main.css
@@ -1,16 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 body {
   display: flex;
   align-items: center;
   justify-content: flex-center;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
+  text-align: center;
+  font-family:  'Roboto', sans-serif;
 }
 
 .header {
+  
   background: rgb(0, 0, 0);
+  width: 100%;
   color: whitesmoke;
-  font-family: 'Cormorant Garamond', serif;
+  font-family:  'Roboto', sans-serif;
   font-size: 1vw;
   text-align: center;
   list-style-type: none;
+}
+
+img {
+  max-width: 600px;
+}
+
+h6 {
+  /* font-size: larger; */
+}
+
+.footer {
+  /* position: absolute;
+  top: 95%; */
+}
+
+.guess {
+  font-size: larger;
+  margin: 20px 20px 20px 20px;
+}
+
+.NextButton{
+  margin: 10px 10px 10px 10px;
 }
