--- a/views/partials/instructions.hbs
+++ b/views/partials/instructions.hbs
@@ -1,9 +1,6 @@
 <div class="instructions">
 <h3>Guess the Goat location</h3>
-<ul>
-    <li>- name of the goat</li>
-    <li>- guess where the goat is from</li>
-    <li>- select on the map</li>
+<p> Have a look at the goat below and see if you can guess what continent it is from.</p>
     
 </div>
     
