Cleaned up the spacing around the next goat button

--- a/views/partials/nextGoat.hbs
+++ b/views/partials/nextGoat.hbs
@@ -1,1 +1,1 @@
-<button><a href="/goat/{{nextID}}">NEXT GOAT</a></button>
+<button class="NextButton"><a href="/goat/{{nextID}}">NEXT GOAT</a></button>
