add image to home page and mod css for better margins

--- a/public/main.css
+++ b/public/main.css
@@ -26,15 +26,6 @@ img {
   max-width: 600px;
 }
 
-h6 {
-  /* font-size: larger; */
-}
-
-.footer {
-  /* position: absolute;
-  top: 95%; */
-}
-
 .guess {
   font-size: larger;
   margin: 20px 20px 20px 20px;
@@ -42,4 +33,12 @@ h6 {
 
 .NextButton{
   margin: 10px 10px 30px 10px;
+}
+
+.play {
+  font-size: x-large;
+}
+
+.homegoat {
+  margin: 50px 10px 10px 10px;
 }
