--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,14 +1,14 @@
 {{!-- welcome page
       input for username --}}
-
+<img class="homegoat" src="/images/home-goat.jpg">
 <div class="username-input">
   <form>
     <br>
     <br>
-    <button><a href="/goat/1">Click me to play</a></button>
+    <button class="play"><a href="/goat/1">Lets guess the goats!</a></button>
     <br><br>
   </form>
 </div>
 
-<p>bought to you by sporty spice</p>
+<p>brought to you by sporty spice</p>
 {{!-- {{>footer}} --}}
