--- a/views/partials/nextGoat.hbs
+++ b/views/partials/nextGoat.hbs
@@ -1,1 +1,2 @@
-<button class="NextButton"><a href="/goat/{{nextID}}">NEXT GOAT</a></button>
+<button class="button"><a href="/goat/{{nextID}}">NEXT GOAT</a></button>
+<button class="button"><a href="/">HOME</a></button>
