--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,3 +1,3 @@
 <div class="footer">
-Created by Ngahine, Josh and Braden of Team Sporty Spice!
+Created by Ngahine, Josh and Braden. Sporty Spice!
 </div>
